{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 27,
  "lineage": "88c94950-2e10-49fd-f3cd-37442bc314b4",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "airbyte",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-24T15:41:00.282-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gilbert-learning-gcp-113/global/firewalls/airbyte-app-firewall",
            "log_config": [],
            "name": "airbyte-app-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/gilbert-learning-gcp-113/global/networks/default",
            "priority": 1000,
            "project": "gilbert-learning-gcp-113",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gilbert-learning-gcp-113/global/firewalls/airbyte-app-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-24T15:41:00.286-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gilbert-learning-gcp-113/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gilbert-learning-gcp-113/global/networks/default",
            "priority": 1000,
            "project": "gilbert-learning-gcp-113",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gilbert-learning-gcp-113/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20220920",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gilbert-learning-gcp-113/zones/us-central1-a/disks/airbyte-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gilbert-learning-gcp-113/zones/us-central1-a/instances/airbyte-vm",
            "instance_id": "532064198235142547",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "YAH0Y3fMIio=",
            "metadata_startup_script": "#!/usr/bin/env bash\n\n# install docker\nsudo apt-get update\nsudo apt-get install -y apt-transport-https ca-certificates curl gnupg2 software-properties-common\ncurl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add --\nsudo add-apt-repository \"deb [arch=amd64] https://download.docker.com/linux/debian buster stable\"\nsudo apt-get update\nsudo apt-get install -y docker-ce docker-ce-cli containerd.io\nsudo usermod -a -G docker $USER\n\ [...]
            "name": "airbyte-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.225.124.118",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gilbert-learning-gcp-113/global/networks/default",
                "network_ip": "10.128.0.17",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gilbert-learning-gcp-113/regions/us-central1/subnetworks/default",
                "subnetwork_project": "gilbert-learning-gcp-113"
              }
            ],
            "project": "gilbert-learning-gcp-113",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gilbert-learning-gcp-113/zones/us-central1-a/instances/airbyte-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          }
        }
      ]
    }
  ]
}